--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@
             
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
- Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor
- sit amet Lorem ipsum dolor sit amet.</p>
+
+                <p>ARAH Akakia Teknologi adalah perusahaan yang mengakar dan berorientasi pada teknologi yang inovatif.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -125,10 +123,8 @@
             
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
- Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor
- sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+
+                <p>Kami membawa manfaat bagi semua lapisan masyarakat baik dari perusahaan, end user maupun investor.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
