Update logo header path

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-      <h1><a href="#intro" class="scrollto"><img src="ARAH_Akakia_Teknologi_files/favicon.png" alt=""> ARAH Akakia Teknologi</a></h1>
+      <h1><a href="#intro" class="scrollto"><img src="img/AAT/logo_AAT_header.png" alt=""> ARAH Akakia Teknologi</a></h1>
       </div>
 
       <nav id="nav-menu-container">
