--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ sit amet
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>Jl. Aristoleles Utama No.29, Madang, Kec. Pagedangan, Tangerang, Banten 15334</address>
+              <address>Jl. Aristoleles Utara No.29, Medang, Kec. Pagedangan, Tangerang, Banten 15334</address>
             </div>
           </div>
 
@@ -698,7 +698,7 @@ sit amet
             <h4>Contact Us</h4>
             <p>
               
-              Jl. Aristoleles Utama No.29, Madang, Kec. Pagedangan, Tangerang, Banten 15334<br>
+              Jl. Aristoleles Utara No.29, Medang, Kec. Pagedangan, Tangerang, Banten 15334<br>
             
               <strong>Phone:</strong> (+62)878 7831 7751<br>
               <strong>Email:</strong> arah.akakia@gmail.com<br>
