fixing another typo

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ sit amet
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#testimonials">Terstimonials</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
