fix typo mision

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ kalangan masyarakat</p>
                 <img src="img/2.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Mision</a></h2>
+              <h2 class="title"><a href="#">Mission</a></h2>
               <p>
               Mengubah dan mempelopori konversi sitem konvensional ke digital dalam hal alur B2B dari awal hinggal akhir .
               </p>
